<package format="3">
  <name>tmc_collision_detecting_validator</name>
  <version>2.0.0</version>
  <description>The tmc_collision_detecting_validator package</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <author>Keisuke Takeshita</author>
  <author>Satoru Onoda</author>

  <license>BSD 3-clause Clear License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>moveit_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tmc_manipulation_types</depend>
  <depend>tmc_manipulation_types_bridge</depend>
  <depend>tmc_planning_msgs</depend>
  <depend>tmc_robot_collision_detector</depend>
  <depend>tmc_robot_local_planner</depend>
  <depend>tmc_utils</depend>

  <exec_depend>tmc_launch_ros_utils</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>tmc_manipulation_tests</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>