<package format="3">
  <name>tmc_local_path_evaluator</name>
  <version>2.0.0</version>
  <description>Evaluate local trajectory</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <author>Keisuke Takeshita</author>
  <author>Satoru Onoda</author>

  <license>BSD 3-clause Clear License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>boost</depend>
  <depend>moveit_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tmc_manipulation_types</depend>
  <depend>tmc_manipulation_types_bridge</depend>
  <depend>tmc_planning_msgs</depend>
  <depend>tmc_robot_kinematics_model</depend>
  <depend>tmc_robot_local_planner</depend>
  <depend>tmc_robot_local_planner_utils</depend>
  <depend>tmc_utils</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>tmc_manipulation_tests</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>