<package format="2">
  <name>tmc_robot_local_planner</name>
  <version>2.0.0</version>
  <description>The tmc_robot_local_planner package</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <author>Keisuke Takeshita</author>
  <author>Satoru Onoda</author>
  <author>Yuta Watanabe</author>

  <license>BSD 3-clause Clear License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tmc_eigen_utils</depend>
  <depend>tmc_manipulation_types</depend>
  <depend>tmc_manipulation_types_bridge</depend>
  <depend>tmc_planning_msgs</depend>
  <depend>tmc_utils</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>