<package format="3">
  <name>tmc_robot_local_planner_visualization</name>
  <version>2.0.0</version>
  <description> Visualization tools for robot local planner </description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>
  <license>BSD 3-clause Clear License</license>

  <author>Keisuke Takeshita</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>pluginlib</depend>
  <depend>moveit_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>tf2_eigen</depend>
  <depend>tmc_eigen_utils</depend>
  <depend>tmc_planning_msgs</depend>
  <depend>tmc_manipulation_types_bridge</depend>
  <depend>tmc_robot_kinematics_model</depend>
  <depend>tmc_utils</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>tmc_manipulation_tests</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>